2.2 So let me show you how you can do it. Let's take this example of a party animation that triggers on hover. It's called party because, well, as I hover over the square, you can see that it's having a good time bumping and bumping to the beat. Uh, but this might be a little too much for folks that have issues with motion. So let me show you how you can guard this because what we would like is to offer a different kind of animation. It doesn't need to be completely flat, but let's enable the other animation that I've got here called Pulse. And this one is much more subtle. It's just going to change the opacity of the square in and out. So there's still some sort of animation and motion going, but this is not going to trigger any motion sickness because there's not really motion. It's just the opacity fading in and out. And this is considered a safe animation.

--- a/resources/css/intro.css
+++ b/resources/css/intro.css
@@ -34,5 +34,5 @@
 }
 
 .square:hover {
-  animation: party 0.75s ease-in-out infinite alternate;
+  animation: pulse 0.75s ease-in-out infinite alternate;
 }
